# robotops_config

./: .gitignore  .yamllint  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.validate  README.md  buf.gen.yaml  buf.yaml  justfile
.github/actions/publish-cargo-codeartifact/: action.yml
.github/actions/publish-debian-s3/: action.yml
.github/workflows/: ci.yml  release-dev.yml  release.yml  validate.yml
config/: default.yaml  minimal.yaml
config/examples/: high-bandwidth.yaml  low-resource.yaml  nav2.yaml
debian/: changelog  control  copyright  rules
docs/: REFERENCE.md
examples/: high-bandwidth.yaml  low-resource.yaml  nav2.yaml
proto/robotops/config/v1/: config.proto  test.proto
schema/: config.schema.json
test/cmake_integration/: CMakeLists.txt  test.cpp
tools/: validate-examples.py
tools/robotops-codegen/: main.py
tools/templates/: README.md
tools/templates/cpp/: conanfile.py
tools/templates/ros2/: CMakeLists.txt  package.xml  robotops-configConfig.cmake.in
tools/templates/rust/: Cargo.toml
