<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robotops-config</name>
  <version>{{VERSION}}</version>
  <description>Generated Protobuf configuration types for RobotOps distributed tracing</description>
  <maintainer email="support@robotops.dev">RobotOps Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>protobuf</build_depend>
  <exec_depend>protobuf</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
